# nonebot_plugin_idiom

./: LICENSE  README.md  pyproject.toml  requirements.txt
nonebot_plugin_Idiom/: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
nonebot_plugin_Idiom/nonebot_plugin_Idiom/: __init__.py
nonebot_plugin_idiom/: __init__.py
