[tool.poetry]
name = "nonebot-plugin-idiom"
version = "0.1.0"
description = ""
authors = ["Your dxn <1684193123@qq.com>"]
readme = "README.md"
packages = [{include = "nonebot_plugin_idiom"}]


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
pandas = "^1.5.2"
nb-cli = "0.6.8"
nonebot-adapter-onebot = "2.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
