[tool.poetry]
name = "nonebot-plugin-idiom"
version = "0.1.4"
description = ""
authors = ["Your dxn <1684193123@qq.com>"]
readme = "README.md"
packages = [{include = "nonebot_plugin_idiom"}]


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.7"
nonebot2 = "^2.0.0b5"
nonebot-adapter-onebot = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
